# search_v2

./: .gitignore  config.py  embedding.py  experiment.ipynb  main.py  pdf_chunker.py  pdf_chunker_new.py  pyproject.toml  requirements.txt  sections.json
